--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "slim/flash": "^0.4.0",
         "vlucas/valitron": "^1.4",
         "odan/twig-assets": "^2.3",
-        "vlucas/phpdotenv": "^4.1"
+        "vlucas/phpdotenv": "^4.1",
+        "slim/csrf": "^1.0"
     },
 
     "autoload": {
